--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=pass
 
 # patch/delete Httpメソッドをを有効にする
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
 
 # スネークケースからキャメルケースへ変換
 mybatis.configuration.map-underscore-to-camel-case=true
